# soqpuppet

./: .gitignore  .vimrc  README.md  gistfile1.txt  so.hs  soqpuppet.cabal  soqpuppet.hs
