Name: soqpuppet
Version: 0.2
Description: Query for latest SO questions in a tag and send to pushover
License: GPL
Author: Ratan Sebastian
Build-Type: Simple
Cabal-Version: >=1.2
Executable soqpuppet
  Main-is: soqpuppet.hs
  Build-Depends: 
      base >= 4.6.0.1, 
      directory >= 1.2.0.1, 
      time >= 1.4.1, 
      parsec >= 3.1.3, 
      mtl >= 2.1.2, 
      MaybeT >= 0.1.2, 
      network >= 2.4.1.2, 
      HTTP >= 400.2.8,
      csv >= 0.1.2, 
      aeson >= 0.6.1.0, 
      curl >= 1.3.8, 
      zlib >= 0.5.4.1,
      bytestring >= 0.10.2.0
